--- a/fastlane/custom.env
+++ b/fastlane/custom.env
@@ -6,7 +6,7 @@ VERSION_NUMBER=1.0.0
 INCREMENT_BUILD_NUMBER=false
 APP_NAME=Custom
 APP_SCHEME=mattermost-beta
-REPLACE_ASSETS=false
+REPLACE_ASSETS=true
 MAIN_APP_IDENTIFIER=com.mattermost.rnbeta
 BUILD_FOR_RELEASE=false
 SUBMIT_ANDROID_TO_GOOGLE_PLAY=false
