add app env script

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "form-data": "3.0.0",
     "fuse.js": "5.0.10-beta",
     "gulp": "4.0.2",
+    "gulp-tap": "2.0.0",
     "intl": "1.2.5",
     "jail-monkey": "2.3.2",
     "mime-db": "1.43.0",
